RESOLVED FIXED19052
Local variables should be accessible in the console when a script is paused
https://bugs.webkit.org/show_bug.cgi?id=19052
Summary Local variables should be accessible in the console when a script is paused
Anthony Ricaud
Reported 2008-05-14 12:19:22 PDT
When a script is paused, a web developer would like to try some javascript with local variables. But they are not accessible in the console. Steps to reproduce: 1. Go to http://webkit.org/demos/drosera 2. Open and attach the Inspector's debugger 3. Put a breakpoint in the rot13 function 4. Click the button labelled "Nested Functions" 5. Open the Inspector's console and type "s" and Enter You'll get a "ReferenceError: Can't find variable: s "
Attachments
Timothy Hatcher
Comment 1 2008-05-16 13:50:14 PDT
Landed in r33527.
Note You need to log in before you can comment on or make changes to this bug.