Adds the ability to evaluate expressions in the local scope of the selected call frame.

https://bugs.webkit.org/show_bug.cgi?id=19052

Reviewed by Geoff Garen.

* bindings/js/JSJavaScriptCallFrameCustom.cpp:
(WebCore::JSJavaScriptCallFrame::evaluate): Pass the exception
from evaluate to the calling ExecState.
* page/JavaScriptCallFrame.cpp:
(WebCore::JavaScriptCallFrame::evaluate): Added an exception out
argument. Simplified the code by calling KJS:eval directly.
* page/JavaScriptCallFrame.h: Change evalutate to take an exception
out argument.
* page/inspector/Console.js: Check if the debugger is paused and
call evaluateInSelectedCallFrame on the Scripts panel.
* page/inspector/ScriptsPanel.js: Added a paused getter and
evaluateInSelectedCallFrame which does the evaluation and updates
the scope variables pane afterwards.


Canonical link: https://commits.webkit.org/26394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@33527 268f45cc-cd09-0410-ab3c-d52691b4dbfc